--- a/database/docker-compose-db.yaml
+++ b/database/docker-compose-db.yaml
@@ -3,14 +3,15 @@ services:
   postgres:
     image: postgres
     restart: always
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=1234
+    env_file:
+      - .env
+    volumes:
+      - ${DB_PROJ_DIR:-.}/dataset:/docker-entrypoint-initdb.d
     ports:
      - 5432:5432
     
   
-  mongo:
-    image: mongo
-    ports:
-      - 27017:27017
+  # mongo:
+  #   image: mongo
+  #   ports:
+  #     - 27017:27017
